# circom-compat

./: Cargo.toml
src/: circuit.rs  lib.rs  r1cs_reader.rs
