[package]
name = "ark-circom"
version = "0.5.0-alpha"
edition = "2018"
description = "Arkworks bindings to Circom's R1CS, for Groth16 Proof and Witness generation in Rust"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/circom-compat"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-traits = { version = "^0.2.15", default-features = false }
num-bigint = { version = "^0.4.3", default-features = false, features = ["rand"] }

# ZKP Generation
ark-ff = { version = "0.5.0-alpha", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.5.0-alpha", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.5.0-alpha", default-features = false }
ark-serialize = { version = "0.5.0-alpha", default-features = false }

# decoding of data
hex = "^0.4.3"
byteorder = "^1.5.0"

# error handling
color-eyre = "^0.6.3"

cfg-if = "^1.0.0"

[dev-dependencies]
hex-literal = "^0.4.1"

[features]
default = []