[package]
name = "ark-circom"
version = "0.5.0"
edition = "2018"
description = "Arkworks bindings to Circom's R1CS, for Groth16 Proof and Witness generation in Rust"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/circom-compat"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ZKP Generation
ark-ff = { version = "0.5.0", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.5.1", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }

# decoding of data
hex = "^0.4.3"
byteorder = "^1.5.0"

# error handling
color-eyre = "^0.6.3"

[features]
default = []